--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Reading Group by FudanIMC</title>
+    <title>Computer Vision@Fudan Univ</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Reading Group</h1>
-        <h2>IMC@Fudan</h2>
-        <a href="https://github.com/FudanIMC" class="button"><small>Follow me on</small>GitHub</a>
+        <h1>计算机视觉</h1>
+        <h2>陈雁秋</h2>
+        <a href="https://github.com/FudanCV" class="button"><small>Follow me on</small>GitHub</a>
       </div>
     </header>
 
@@ -41,44 +41,44 @@
   </tr>
 
   <tr>
-    <td>Sept 15</td>
-    <td>Sheng Zeng</td>
-    <td>Weakly-Supervised Semantic Segmentation[<a href="./slides/zengsheng.pdf">slides</a>]
+    <td>2014年9月17日</td>
+    <td>陈雁秋</td>
+    <td>引言[<a href="http://10.141.208.19/A1.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
-    <td>Sept 15</td>
-    <td>Dequan Wang</td>
-    <td>Convolutional Neural Network[<a href="#">slides</a>]
+    <td>2014年9月17日</td>
+    <td>陈雁秋</td>
+    <td>图像的数字表示[<a href="http://10.141.208.19/B1.pdf">slides</a>]
     </td>
   </tr>
   
   <tr>
-    <td>Sept 22</td>
-    <td>Ningyi Deng</td>
-    <td>Salient Region Detection[<a href="#">slides</a>]
+    <td>2014年9月17日</td>
+    <td>陈雁秋</td>
+    <td>Salient Region Detection[<a href="http://10.141.208.19/C1.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
-    <td>Sept 22</td>
-    <td>Qipeng Guo</td>
-    <td>Person Re-Identification[<a href="#">slides</a>]
+    <td>2014年9月24日</td>
+    <td>陈雁秋</td>
+    <td>Person Re-Identification[<a href="http://10.141.208.19/C2.pdf">slides</a>]
     </td>
   </tr>
   
   <tr>
-    <td>Sept 29</td>
-    <td>Hao Guan</td>
-    <td>Video Object Tracking[<a href="#">slides</a>]
+    <td>2014年9月24日</td>
+    <td>陈雁秋</td>
+    <td>Video Object Tracking[<a href="http://10.141.208.19/C3.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
-    <td>Sept 29</td>
-    <td>Guangzhen Zhou</td>
-    <td>Deformable Parts Model[<a href="#">slides</a>]
+    <td>2014年9月24日</td>
+    <td>陈雁秋</td>
+    <td>Deformable Parts Model[<a href="http://10.141.208.19/D1.pdf">slides</a>]
     </td>
   </tr>
   
