--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h2><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome to IMC@Fudan Reading Group.</h2>
+          <h2><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>2014-2015学年上学期</h2>
 
 <h3>
-<a name="fall-2014-schedule" class="anchor" href="#fall-2014-schedule"><span class="octicon octicon-link"></span></a>Fall 2014 Schedule<br> Monday 18:30-20:30, Fudan University<br></h3>
+<a name="fall-2014-schedule" class="anchor" href="#fall-2014-schedule"><span class="octicon octicon-link"></span></a>Fall 2014 Schedule<br> 周三上午2-4节，张江校区2313教室<br></h3>
 
 <table class="p" cellpadding="5">
   <tr bgcolor="#F5EEC6">
@@ -57,28 +57,28 @@
   <tr>
     <td>2014年9月17日</td>
     <td>陈雁秋</td>
-    <td>Salient Region Detection[<a href="http://10.141.208.19/C1.pdf">slides</a>]
+    <td>直线检测[<a href="http://10.141.208.19/C1.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
     <td>2014年9月24日</td>
     <td>陈雁秋</td>
-    <td>Person Re-Identification[<a href="http://10.141.208.19/C2.pdf">slides</a>]
+    <td>边缘检测[<a href="http://10.141.208.19/C2.pdf">slides</a>]
     </td>
   </tr>
   
   <tr>
     <td>2014年9月24日</td>
     <td>陈雁秋</td>
-    <td>Video Object Tracking[<a href="http://10.141.208.19/C3.pdf">slides</a>]
+    <td>目标检测[<a href="http://10.141.208.19/C3.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
     <td>2014年9月24日</td>
     <td>陈雁秋</td>
-    <td>Deformable Parts Model[<a href="http://10.141.208.19/D1.pdf">slides</a>]
+    <td>图像分割[<a href="http://10.141.208.19/D1.pdf">slides</a>]
     </td>
   </tr>
   
