--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <h2><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>2014-2015学年上学期</h2>
 
 <h3>
-<a name="fall-2014-schedule" class="anchor" href="#fall-2014-schedule"><span class="octicon octicon-link"></span></a>Fall 2014 Schedule<br> 周三上午2-4节，张江校区2313教室<br></h3>
+<a name="fall-2014-schedule" class="anchor" href="#fall-2014-schedule"><span class="octicon octicon-link"></span></a>周三上午2-4节，张江校区2313教室<br></h3>
 
 <table class="p" cellpadding="5">
   <tr bgcolor="#F5EEC6">
