--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <table class="p" cellpadding="5">
   <tr bgcolor="#F5EEC6">
      <th class="bottomborder" align="middle" width="75">Date</th>
-    <th class="bottomborder" align="middle" width="100">Moderator</th>
+    <th class="bottomborder" align="middle" width="100">Lecturer</th>
     <th class="bottomborder" align="middle" width="300">Topic</th>
   </tr>
 
@@ -82,6 +82,47 @@
     </td>
   </tr>
   
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>目标检测[<a href="http://10.141.208.19/C3.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>图像分割[<a href="http://10.141.208.19/D1.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>目标识别[<a href="http://10.141.208.19/E1.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>形状特征的提取[<a href="http://10.141.208.19/F1.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>纹理特征的提取[<a href="http://10.141.208.19/F2.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>骨架的提取[<a href="http://10.141.208.19/F3.pdf">slides</a>]
+    </td>
+  </tr>
 
 </table>
 
