--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="javascripts/script.js"></script>
 
-  <title>计算机视觉</title>
-  <meta name="description" content="复旦大学计算机科学技术学院">
+  <title>Computer Vision</title>
+  <meta name="description" content="School of Computer Science, Fudan University">
 
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
@@ -22,23 +22,150 @@
 
   <div class="wrapper">
     <header>
-      <h1 class="title">计算机视觉</h1>
+      <h1 class="title">Computer Vision</h1>
     </header>
     <div id="container">
-      <p class="tagline">复旦大学计算机科学技术学院</p>
+      <p class="tagline">School of Computer Science, Fudan University</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
-          <a href="https://github.com/FudanCV" class="code">View 计算机视觉 on GitHub</a>
+          <a href="https://github.com/FudanCV" class="code">View FudanCV on GitHub</a>
         </div>
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
           <h3>
-<a name="%E5%BC%A0%E6%B1%9F%E6%A0%A1%E5%8C%BA2313%E6%95%99%E5%AE%A4" class="anchor" href="#%E5%BC%A0%E6%B1%9F%E6%A0%A1%E5%8C%BA2313%E6%95%99%E5%AE%A4"><span class="octicon octicon-link"></span></a>张江校区2313教室</h3>
 
 <h3>
 <a name="%E8%AF%BE%E7%A8%8B%E8%AE%B2%E4%B9%89" class="anchor" href="#%E8%AF%BE%E7%A8%8B%E8%AE%B2%E4%B9%89"><span class="octicon octicon-link"></span></a>课程讲义</h3>
+
+<table class="p" cellpadding="5">
+  <tr bgcolor="#F5EEC6">
+     <th class="bottomborder" align="middle" width="75">Date</th>
+    <th class="bottomborder" align="middle" width="100">Lecturer</th>
+    <th class="bottomborder" align="middle" width="300">Topic</th>
+  </tr>
+
+  <tr>
+    <td>2014年9月17日</td>
+    <td>陈雁秋</td>
+    <td>引言[<a href="http://10.141.208.19/A1.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>2014年9月17日</td>
+    <td>陈雁秋</td>
+    <td>图像的数字表示[<a href="http://10.141.208.19/B1.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>2014年9月17日</td>
+    <td>陈雁秋</td>
+    <td>直线检测[<a href="http://10.141.208.19/C1.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>2014年9月24日</td>
+    <td>陈雁秋</td>
+    <td>边缘检测[<a href="http://10.141.208.19/C2.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>2014年9月24日</td>
+    <td>陈雁秋</td>
+    <td>目标检测[<a href="http://10.141.208.19/C3.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>2014年9月24日</td>
+    <td>陈雁秋</td>
+    <td>图像分割[<a href="http://10.141.208.19/D1.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>目标检测[<a href="http://10.141.208.19/C3.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>图像分割[<a href="http://10.141.208.19/D1.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>目标识别[<a href="http://10.141.208.19/E1.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>形状特征的提取[<a href="http://10.141.208.19/F1.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>纹理特征的提取[<a href="http://10.141.208.19/F2.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>骨架的提取[<a href="http://10.141.208.19/F3.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>光学成像[<a href="http://10.141.208.19/G1.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>光谱与颜色[<a href="http://10.141.208.19/G2.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>针孔成像[<a href="http://10.141.208.19/G3.pdf">slides</a>]
+    </td>
+  </tr>
+
+  <tr  bgcolor="#F5EEC6">
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>几何定标[<a href="http://10.141.208.19/G4.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr>
+    <td>*</td>
+    <td>陈雁秋</td>
+    <td>三维重建[<a href="http://10.141.208.19/G5.pdf">slides</a>]
+    </td>
+  </tr>
+
+</table>
 
 <h3>
 <a name="%E5%8F%82%E8%80%83%E8%B5%84%E6%96%99" class="anchor" href="#%E5%8F%82%E8%80%83%E8%B5%84%E6%96%99"><span class="octicon octicon-link"></span></a>参考资料</h3>
