--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   </div>
   <div class="current-section">
     <a href="#top">Scroll to top</a>
-    <a href="https://github.com/FudanCV/fudancv.github.io/tarball/master" class="tar">tar</a><a href="https://github.com/FudanCV/fudancv.github.io/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
+    <a href="http://10.141.208.19/CV.tar" class="tar">tar</a><a href="http://10.141.208.19/CV.zip" class="zip">zip</a><a href="" class="code">source code</a>
     <p class="name"></p>
   </div>
 
