Add Project Requirements

--- a/index.html
+++ b/index.html
@@ -168,6 +168,16 @@
 </table>
 
 <h3>
+<a name="Project" class="anchor" href="#Project"><span class="octicon octicon-link"></span></a>项目要求[<a href="http://10.141.208.19/Project.pdf">slides</a>]</h3>
+
+<ul>
+<li><p>Find a research problem in Computer Vision that is important and still open. Conduct a survey of publications on your chosen problem. Study the collected materials to build an understanding of the history, state-of-the-art and applications of the methods.</p></li>
+<li><p>Implement one solution, and perform experiments to evaluate its performance. Write a report of around 3,000 words and prepare a slide show of 15 minutes to present your work.</p></li>
+<li><p>Submit your project report and slide show files to your class representative one day prior to your presentation. The two files should be named using your student number followed by your name in Chinese.</p></li>
+<li><p>Your presentation is scheduled on Day Month, Year. Class representative: Please copy all PPT files onto a mobile drive and bring it to the classroom.</p></li>
+</ul>
+
+<h3>
 <a name="%E5%8F%82%E8%80%83%E8%B5%84%E6%96%99" class="anchor" href="#%E5%8F%82%E8%80%83%E8%B5%84%E6%96%99"><span class="octicon octicon-link"></span></a>参考资料</h3>
 
 <ul>
