--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <td>图像的数字表示[<a href="http://10.141.208.19/B1.pdf">slides</a>]
     </td>
   </tr>
-  
+
   <tr>
     <td>2014年9月17日</td>
     <td>陈雁秋</td>
@@ -73,35 +73,21 @@
     <td>边缘检测[<a href="http://10.141.208.19/C2.pdf">slides</a>]
     </td>
   </tr>
-  
+
   <tr>
-    <td>2014年9月24日</td>
+    <td>2014年10月8日</td>
     <td>陈雁秋</td>
-    <td>目标检测[<a href="http://10.141.208.19/C3.pdf">slides</a>]
+    <td>图像分割[<a href="http://10.141.208.19/C3.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
-    <td>2014年9月24日</td>
+    <td>2014年10月8日</td>
     <td>陈雁秋</td>
-    <td>图像分割[<a href="http://10.141.208.19/D1.pdf">slides</a>]
-    </td>
-  </tr>
-  
-  <tr>
-    <td>*</td>
-    <td>陈雁秋</td>
-    <td>目标检测[<a href="http://10.141.208.19/C3.pdf">slides</a>]
+    <td>目标检测[<a href="http://10.141.208.19/D1.pdf">slides</a>]
     </td>
   </tr>
 
-  <tr  bgcolor="#F5EEC6">
-    <td>*</td>
-    <td>陈雁秋</td>
-    <td>图像分割[<a href="http://10.141.208.19/D1.pdf">slides</a>]
-    </td>
-  </tr>
-  
   <tr>
     <td>*</td>
     <td>陈雁秋</td>
@@ -115,7 +101,7 @@
     <td>形状特征的提取[<a href="http://10.141.208.19/F1.pdf">slides</a>]
     </td>
   </tr>
-  
+
   <tr>
     <td>*</td>
     <td>陈雁秋</td>
@@ -129,7 +115,7 @@
     <td>骨架的提取[<a href="http://10.141.208.19/F3.pdf">slides</a>]
     </td>
   </tr>
-  
+
   <tr>
     <td>*</td>
     <td>陈雁秋</td>
@@ -143,7 +129,7 @@
     <td>光谱与颜色[<a href="http://10.141.208.19/G2.pdf">slides</a>]
     </td>
   </tr>
-  
+
   <tr>
     <td>*</td>
     <td>陈雁秋</td>
@@ -157,7 +143,7 @@
     <td>几何定标[<a href="http://10.141.208.19/G4.pdf">slides</a>]
     </td>
   </tr>
-  
+
   <tr>
     <td>*</td>
     <td>陈雁秋</td>
@@ -204,6 +190,6 @@
     <p class="name"></p>
   </div>
 
-  
+
 </body>
 </html>
