--- a/index.html
+++ b/index.html
@@ -98,56 +98,63 @@
   <tr  bgcolor="#F5EEC6">
     <td>2014年10月22日</td>
     <td>陈雁秋</td>
-    <td>形状特征的提取[<a href="http://10.141.208.19/F1.pdf">slides</a>]
+    <td>形状特征的提取[<a href="http://10.141.208.19/E2.pdf">slides</a>]
     </td>
   </tr>
 
   <tr>
     <td>2014年10月22日</td>
     <td>陈雁秋</td>
-    <td>纹理特征的提取[<a href="http://10.141.208.19/F2.pdf">slides</a>]
+    <td>纹理特征的提取[<a href="http://10.141.208.19/E3.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
     <td>2014年10月29日</td>
     <td>陈雁秋</td>
-    <td>骨架的提取[<a href="http://10.141.208.19/F3.pdf">slides</a>]
+    <td>骨架的提取[<a href="http://10.141.208.19/E4.pdf">slides</a>]
     </td>
   </tr>
 
   <tr>
-    <td>*</td>
+    <td>2014年11月5日</td>
     <td>陈雁秋</td>
-    <td>光学成像[<a href="http://10.141.208.19/G1.pdf">slides</a>]
+    <td>光学成像[<a href="http://10.141.208.19/F1.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
-    <td>*</td>
+    <td>2014年11月5日</td>
     <td>陈雁秋</td>
-    <td>光谱与颜色[<a href="http://10.141.208.19/G2.pdf">slides</a>]
+    <td>光谱与颜色[<a href="http://10.141.208.19/F2.pdf">slides</a>]
     </td>
   </tr>
 
   <tr>
-    <td>*</td>
+    <td>2014年11月12日</td>
     <td>陈雁秋</td>
-    <td>针孔成像[<a href="http://10.141.208.19/G3.pdf">slides</a>]
+    <td>针孔成像[<a href="http://10.141.208.19/F3.pdf">slides</a>]
     </td>
   </tr>
 
   <tr  bgcolor="#F5EEC6">
-    <td>*</td>
+    <td>2014年11月19日</td>
     <td>陈雁秋</td>
-    <td>几何定标[<a href="http://10.141.208.19/G4.pdf">slides</a>]
+    <td>几何定标[<a href="http://10.141.208.19/G1.pdf">slides</a>]
     </td>
   </tr>
 
   <tr>
-    <td>*</td>
+    <td>2014年11月19日</td>
     <td>陈雁秋</td>
-    <td>三维重建[<a href="http://10.141.208.19/G5.pdf">slides</a>]
+    <td>三维重建[<a href="http://10.141.208.19/H1.pdf">slides</a>]
+    </td>
+  </tr>
+  
+  <tr  bgcolor="#F5EEC6">
+    <td>2014年11月26日</td>
+    <td>陈雁秋</td>
+    <td>关键点检测[<a href="http://10.141.208.19/H2.pdf">slides</a>]
     </td>
   </tr>
 
